Vertical align fix II

--- a/less/main.less
+++ b/less/main.less
@@ -14,7 +14,7 @@
 	left:10px;
 
 	>div{
-		
+		.size(100%);
 	}
 }
 
@@ -54,9 +54,9 @@
 	top: 140px;
 	left: 70px;
 	>div{
-		width:52px;
-margin-left: 0px;
-left: 0;
+		.size(100%);
+		margin-left: 0px;
+		left: 0;
 		
 			
 		
